deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodlink-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: api-foodlink.christofletjhai.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodlink-api
                port:
                  name: http
